2009-02-03  Andrew Overholt  <overholt@redhat.com>

	* META-INF/MANIFEST.MF: Move JUnit from Import-package to Require-bundle to see
	if this fixes the JUnit4 vs. JUnit 3.x issues.
	* test.xml: plugin-name -> massif-plugin-name.

2009-02-02  Andrew Overholt  <overholt@redhat.com>

	* build.properties: Add test.xml.
	* test.xml: Update.

2009-01-13  Elliott Baron  <ebaron@redhat.com>

	* AllTests: ChartTests added to suite.

2009-01-05  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: Changed version to 0.1.0.
	* build.properties: Include about.html.
	* about.html: Added.