@@ -7,7 +7,7 @@ Bundle-Activator: org.eclipse.linuxtools.valgrind.massif.tests.MassifTestsPlugin
 Bundle-Vendor: %Bundle-Vendor.0
 Require-Bundle: org.eclipse.ui,
  org.eclipse.core.runtime,
- org.junit;bundle-version="3.8.2"
+ org.junit;bundle-version="[0.0.0,4.0.0)"
 Bundle-RequiredExecutionEnvironment: J2SE-1.5
 Bundle-ActivationPolicy: lazy
 Bundle-Localization: plugin
